--- a/views/parts/navi.ejs
+++ b/views/parts/navi.ejs
@@ -7,6 +7,7 @@
       <li><a href="/">Главная</a></li>
       <li><a href="/about">О нас</a></li>
       <li><a href="/contact">Контакты</a></li>
+      <li><a href="/login">Войти</a></li>
     </ul>
 </nav>
 </header>
