--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
     <script src="system/temp.js"></script>
 
     <main>
-        <form action="/login" method="post">
+        <form action="/log" method="post">
             <div class="container">
                 <label for="uname"><b>Username</b></label>
                 <input type="text" placeholder="Enter Username" name="uname" required>
@@ -15,7 +15,7 @@
 
             <div class="container" style="background-color:#f1f1f1">
                 <button type="button" class="cancelbtn">Cancel</button>
-                <span class="psw">Forgot <a href="#">password?</a></span>
+                <span class="psw">Forgot <a href="/resetpass">password?</a></span>
             </div>
             <div class="container" style="background-color:#636363">
                 <span class="reg"><a href="/register">register</a></span>
