--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <script src="system/temp.js"></script>
 
 <main>
-    <button onclick="sendPostRequest('thread', 'newThread');">create Thread</button>
-    <input type="text" id="thread" placeholder="thread name">
+    <button onclick="sendPostRequest('newThread', 'newThreadInput')">create Thread</button>
+    <input type="text" id="newThreadInput" placeholder="thread name">
     <br>
     <br>
     <br>
