--- a/views/parts/navi.ejs
+++ b/views/parts/navi.ejs
@@ -1,13 +1,14 @@
 <header>
+  <link rel="stylesheet" type="text/css" href="/css/themes/dark.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
 
-<nav>
+  <nav>
     <ul>
       <li><a href="/">Главная</a></li>
       <li><a href="/about">О нас</a></li>
       <li><a href="/contact">Контакты</a></li>
       <li><a href="/login">Войти</a></li>
     </ul>
-</nav>
+  </nav>
 </header>
