--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <%- include('parts/navi') %>
 
     <main>
-        <div class="center">
+        <div class="clvLargeBody">
             <%- include('parts/wip') %>
             <!-- <button onclick="sendPostRequest('newThread', 'newThreadInput')">create Thread</button>
             <input type="text" id="newThreadInput" placeholder="thread name">
