--- a/public/css/themes/dark.css
+++ b/public/css/themes/dark.css
@@ -1,7 +1,19 @@
 :root{
-    --primary-color: #333333;
+    /* --primary-color: #333333;
     --secondary-color: #414141;
     --darker-color: #252525;
     --accent-color: #00ff95;
-    --text-color: #f5f5f5;
+    --text-color: #f5f5f5; */
+
+    --background-color: rgb(50,63,70);
+    --background-color-2: rgb(32, 41, 46);
+    --border-color: rgb(37, 37, 37);
+    --accent-border-color: rgb(145, 145, 146);
+
+    --elements-color: rgb(42, 206, 105);
+    --text-color: rgb(249,253,251);
+
+    --border-shadow: 0 0 5px 1px rgb(68, 68, 68);
+
+    --standart-border-radius: 5px;
 }
