--- a/public/css/threadOnPage.css
+++ b/public/css/threadOnPage.css
@@ -1,5 +1,5 @@
 .thread {
-    background-color: var(--primary-color);
+    background-color: var(--background-color-2);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
