--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,22 +2,57 @@
     <script src="system/temp.js"></script>
 
     <main>
-        <form action="/reg" method="POST">
-            <label for="name">Имя:</label>
-            <input type="text" id="name" name="name" placeholder="Введите ваше имя" required>
-     
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Введите ваш email" required>
-     
-            <label for="dob">Дата рождения:</label>
-            <input type="date" id="dob" name="dob" placeholder="Введите вашу дату рождения" required>
-     
-            <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" placeholder="Введите ваш пароль" required>
-     
-            <label for="repassword">Повторите пароль:</label>
-            <input type="password" id="repassword" name="repassword" placeholder="Повторите ваш пароль" required>
-     
-            <button type="submit">Зарегистрироваться</button>
-        </form>
+        <div class="clvBorderBox register">
+            <form action="/reg" method="POST">
+
+                <div class="clvPadding">
+                    <div class="clvMinSpaceBottom">
+                        <label for="name">Имя:</label>
+                    </div>
+
+                    <div class="clvInputElement">
+                        <input  class="maxSize clvInputElement clvMinPadding" id="name" name="name" placeholder="Введите ваше имя" required>
+                    </div>
+                </div>
+                <div class="clvPadding">
+                    <div class="clvMinSpaceBottom">
+                        <label for="email">Email:</label>
+                    </div>
+
+                    <div class="">
+                        <input class="maxSize clvInputElement clvMinPadding" type="email" id="email" name="email" placeholder="Введите ваш email" required>
+                    </div>
+                </div>
+                <div class="clvPadding">
+                    <div class="clvMinSpaceBottom">
+                        <label for="dob">Дата рождения:</label>
+                    </div>
+
+                    <div class="">
+                        <input class="maxSize clvInputElement clvMinPadding" type="date" id="dob" name="dob" placeholder="Введите вашу дату рождения" required>
+                    </div>
+                </div>
+                <div class="clvPadding">
+                    <div class="clvMinSpaceBottom">
+                        <label for="password">Пароль:</label>
+                    </div>
+
+                    <div class="">
+                        <input class="maxSize clvInputElement clvMinPadding" type="password" id="password" name="password" placeholder="Введите ваш пароль" required>
+                    </div>
+                </div>
+                <div class="clvPadding">
+                    <div class="clvMinSpaceBottom">
+                        <label for="repassword">Повторите пароль:</label>
+                    </div>
+
+                    <div class="">
+                        <input class="maxSize clvInputElement clvMinPadding" type="password" id="repassword" name="repassword" placeholder="Повторите ваш пароль" required>
+                    </div>
+                </div>
+                <div class="clvPadding">
+                    <button class="maxSize clvInputElement accent clvMinPadding" type="submit">Зарегистрироваться</button>
+                </div>
+            </form>
+        </div>
     </main>
