--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="css/threadOnPage.css">
 </head>
 
-<%- include('parts/navi') %>
+<%- include('parts/navi', { cookies: cookies }) %>
 
     <main>
         <div class="clvLargeBody">
