--- a/views/parts/navi.ejs
+++ b/views/parts/navi.ejs
@@ -9,7 +9,14 @@
         <li><a href="/">Главная</a></li>
         <li><a href="/about">О нас</a></li>
         <li><a href="/contact">Контакты</a></li>
-        <li><a href="/login">Войти</a></li>
+        <li></li>
+        <li>
+          <% if (cookies.session_id) { %>
+            <a href="/logout">Выйти</a>
+           <% } else { %>
+            <a href="/login">Войти</a>
+           <% } %>
+        </li>
       </ul>
     </div>
 
