--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
                         <label for="uname">Имя:</label>
                     </div>
 
-                    <div class="clvInputElement">
+                    <div class="">
                         <input  class="maxSize clvInputElement clvMinPadding" id="name" name="uname" placeholder="Введите ваше имя" required>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="clvPadding">
-                    <button class="maxSize clvInputElement accent clvMinPadding" type="submit">Войти</button>
+                    <button class="maxSize clvButton accent clvMinPadding" type="submit">Войти</button>
                 </div>
 
                 <div class="clvPadding">
