--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,7 @@
                         <label for="name">Имя:</label>
                     </div>
 
-                    <div class="clvInputElement">
+                    <div class="">
                         <input  class="maxSize clvInputElement clvMinPadding" id="name" name="name" placeholder="Введите ваше имя" required>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="clvPadding">
-                    <button class="maxSize clvInputElement accent clvMinPadding" type="submit">Зарегистрироваться</button>
+                    <button class="maxSize clvButton accent clvMinPadding" type="submit">Зарегистрироваться</button>
                 </div>
             </form>
         </div>
