--- a/views/parts/navi.ejs
+++ b/views/parts/navi.ejs
@@ -7,7 +7,7 @@
     <div class="clvLargeBody">
       <ul>
         <li><a href="/">Главная</a></li>
-        <li><a href="/about">О нас</a></li>
+        <li><a href="/about">О проекте</a></li>
         <li><a href="/contact">Контакты</a></li>
         <li></li>
         <li>
