--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,6 +15,6 @@
                 поддерживает PHP, JS или другие поддерживаемые языки программирования.</p>
             <p class="clvSpaceBottom clvMinPadding">В целом, <strong>форумный движок</strong> - это мощный инструмент для создания и управления форумами,
                 который может помочь увеличить вовлеченность пользователей и улучшить взаимодействие на вашем сайте.</p>
-            <i class="fa fa-gear clvMinPadding" style="display: inline-block;"></i>
+            <i class="fa fa-gear clvMinPadding clvRotate" style="display: inline-block;"></i>
         </div>
     </main>
