--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,7 +7,7 @@
             <ul style="list-style: none;">
                 <li><i class="fa fa-phone"></i> Телефон: +7 999 999 99 99</li>
                 <li><i class="fa fa-envelope"></i> Электронная почта: cliva.wolf@mail.ru</li>
-                <li><i class="fa fa-github"></i> Git</li>
+                <li><i class="fa fa-github"></i> Git/<a href="https://github.com/ClivaWolf/forumEngine">ClivaWolf/forumEngine</a></li>
             </ul>
 
         </div>
