--- a/views/parts/navi.ejs
+++ b/views/parts/navi.ejs
@@ -1,4 +1,9 @@
-<% const userInf = {color:"#fa44fa", username:"asd"} %>
+<% const session = cookies.session_id %>
+<% const Data = require('./public/system/data.js'); %>
+<% const userInf = Data.getUserInfo(session) %>
+<% if (!userInf.image) {
+  userInf.color = "#fa1f2f";
+} %>
 <header>
   <link rel="stylesheet" type="text/css" href="/css/themes/dark.css">
   <link rel="stylesheet" type="text/css" href="/css/constructor.css">
@@ -12,9 +17,10 @@
         <li><a href="/contact">Контакты</a></li>
         <li></li>
       </ul>
-      <ul>
+      <ul class="vCenter">
           <% if (cookies.session_id) { %>
             <li><%- include('userCards/userLink', { userInfo: userInf })%></li>
+            <li><%- include('userCards/userName', { userInfo: userInf })%></li>
             <li><a href="/logout">Выйти</a></li>
            <% } else { %>
             <li><a href="/login">Войти</a></li>
