--- a/views/parts/userCards/userLink.ejs
+++ b/views/parts/userCards/userLink.ejs
@@ -1,7 +1,7 @@
-<div>
+<div class="clvSpaceRight">
     <% if (userInfo.image) { %>
         <img src="<%= userInfo.image %>" alt="Avatar" class="avatar">
     <% } else { %>
-        <span class="clvUser" style="background-color: royalblue;"><%= userInfo.username[0] %></span>
+        <span tooltip="<%= userInfo.name %>" class="noSelect clvUser clvLargeText" style="background-color: royalblue;"><%= userInfo.name[0].toUpperCase() %></span>
     <% } %>
 </div>
