--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,4 @@
-<%- include('parts/navi', { cookies: cookies }) %>
+<%- include('parts/navi', { userInfo: userInfo }) %>
 <main>
     <div class="clvBorderBox clvLargeBody clvCenter">
         <div class="">
