--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include('parts/navi', { cookies: cookies }) %>
+<%- include('parts/navi', { userInfo: userInfo }) %>
     <main>
         <div class="clvBorderBox clvLargeBody clvCenter clvLargeText">
             <p class="clvSpaceBottom clvMinPadding"><strong>Форумный движок</strong> - это программное обеспечение, специально разработанное для создания и
