--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,14 @@
     <link rel="stylesheet" href="css/threadOnPage.css">
 </head>
 
-<%- include('parts/navi', { cookies: cookies }) %>
+<%- include('parts/navi', { userInfo: userInfo }) %>
 
     <main>
         <div class="clvLargeBody">
             <%- include('parts/wip') %>
-            <!-- <button onclick="sendPostRequest('newThread', 'newThreadInput')">create Thread</button>
-            <input type="text" id="newThreadInput" placeholder="thread name">
-            <br><br><br>
-            <input type="text" id="message" placeholder="Enter your message">
-            <button onclick="sendPostRequest()">Send Message</button>
-            <br><br><br><br> -->
+            <% if (userInfo!==null && userInfo.admin) { %>
+                <%- include('parts/adminMain') %>
+            <% } %>
             <% for(let threadName in threads) { %>
                 <div class="thread">
                     <div class="threadIcon">
