--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('parts/navi', { cookies: cookies }) %>
+<%- include('parts/navi', { userInfo: userInfo }) %>
     <script src="system/temp.js"></script>
 
     <main>
