--- a/views/parts/navi.ejs
+++ b/views/parts/navi.ejs
@@ -1,9 +1,3 @@
-<% const session = cookies.session_id %>
-<% const Data = require('./public/system/data.js'); %>
-<% const userInf = Data.getUserInfo(session) %>
-<% if (!userInf.image) {
-  userInf.color = "#fa1f2f";
-} %>
 <header>
   <link rel="stylesheet" type="text/css" href="/css/themes/dark.css">
   <link rel="stylesheet" type="text/css" href="/css/constructor.css">
@@ -18,9 +12,9 @@
         <li></li>
       </ul>
       <ul class="vCenter">
-          <% if (cookies.session_id) { %>
-            <li><%- include('userCards/userLink', { userInfo: userInf })%></li>
-            <li><%- include('userCards/userName', { userInfo: userInf })%></li>
+          <% if (userInfo) { %>
+            <li><%- include('userCards/userLink', { userInfo: userInfo })%></li>
+            <li><%- include('userCards/userName', { userInfo: userInfo })%></li>
             <li><a href="/logout">Выйти</a></li>
            <% } else { %>
             <li><a href="/login">Войти</a></li>
