ToDo createPostPage and done

--- a/views/parts/adminMain.ejs
+++ b/views/parts/adminMain.ejs
@@ -1,8 +1,8 @@
 <div class="clvSpaceBottom clvBorderBox clvVertical">
 
-    <input type="text" id="newThreadInput" placeholder="thread name" class="clvInputElement clvSpaceBottom">
-    <button class="clvButton clvSpaceBottom" button onclick="sendPostRequest('newThread', 'newThreadInput', 'clivaadmin')">create Thread</button>
+    <input type="text" id="newThreadInput" placeholder="thread name" class="clvInputElement clvSpaceBottom clvPadding maxSize2 clvSpaceTop">
+    <button class="clvButton clvSpaceBottom clvPadding maxSize2" button onclick="sendPostRequest('newThread', 'newThreadInput', 'clivaadmin')">create Thread</button>
 
-    <input type="text" id="message" placeholder="Enter your message" class="clvInputElement clvSpaceBottom">
-    <button class="clvButton clvSpaceBottom" disabled="disabled" onclick="sendPostRequest()">Not Work</button>
+    <input type="text" id="message" placeholder="Enter your message" class="clvInputElement clvSpaceBottom clvPadding maxSize2">
+    <button class="clvButton clvSpaceBottom clvPadding maxSize2" disabled="disabled" onclick="sendPostRequest()">Not Work</button>
 </div>
