--- a/public/css/constructor.css
+++ b/public/css/constructor.css
@@ -65,6 +65,11 @@
     max-width: 100% !important;
 }
 
+.maxSize2 {
+    width: 100%;
+    max-width: 95% !important;
+}
+
 .clvInputElement {
     background-color: var(--background-color-2);
     border: 1px solid var(--accent-border-color);
@@ -134,6 +139,17 @@
     align-content: center;
 }
 
+.clvLine{
+    border-bottom: 1px solid var(--text-color);
+}
+
+.clvLeft{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: center;
+}
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
@@ -173,3 +189,13 @@
     -ms-user-select: none;
     user-select: none;
    }
+
+.clvList{
+    list-style-type: none;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.noUnderline:hover{
+    text-decoration: none;
+}
