--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <head>
     <script src="system/temp.js"></script>
-    <link rel="stylesheet" href="css/threadOnPage.css">
+    <!-- <link rel="stylesheet" href="css/threadOnPage.css"> -->
 </head>
 
 <%- include('parts/navi', { userInfo: userInfo }) %>
@@ -8,37 +8,44 @@
     <main>
         <div class="clvLargeBody">
             <%- include('parts/wip') %>
-            <% if (userInfo!==null && userInfo.admin) { %>
-                <%- include('parts/adminMain') %>
-            <% } %>
-            <% for(let threadName in threads) { %>
-                <div class="thread">
-                    <div class="threadIcon">
-                        <span class="icon-back">
-                            <i class="fa fa-comments"></i>
-                        </span>
-                    </div>
-                    <div class="threadMain">
-                        <h2>
-                            <%= threads[threadName].name %>
-                        </h2>
-                        <p title="description">
-                            <%= threads[threadName].description %>
-                        </p>
-                    </div>
-                    <div class="listPost">
-                        <ul>
-                            <% const posts=threads[threadName].posts.slice(-3).reverse(); %>
-                                <% for(let post of posts) { %>
-                                    <li>
-                                        <%= post %>
-                                    </li>
-                                    <% } %>
-                        </ul>
-                    </div>
-                </div>
-                <% } %>
-                    <br><br><br>
-                    <%- include('parts/editor') %>
+                <% if (userInfo!==null && userInfo.admin) { %>
+                    <%- include('parts/adminMain') %>
+                        <% } %>
+                            <% for(let threadName in threads) { %>
+                                <div class="clvHorizontal clvSpaceBottom clvLine">
+                                    <div class="clvPadding">
+                                        <span class="icon-back">
+                                            <i class="fa fa-comments"></i>
+                                        </span>
+                                    </div>
+                                    <div class="clvHorizontal maxSize">
+                                        <div class="clvVertical clvLeft">
+                                            <h2>
+                                                <a class="noUnderline" href="/forum/<%= threads[threadName].link %>"><%= threads[threadName].name %></a>
+                                            </h2>
+                                            <p title="description">
+                                                <%= threads[threadName].description %>
+                                            </p>
+                                        </div>
+                                        <div class="listPost">
+                                            <ul class="clvList">
+                                                <% const posts=threads[threadName].posts.slice(-3).reverse(); %>
+                                                    <% for(let post of posts) { %>
+                                                        <li>
+                                                            <%= post %>
+                                                        </li>
+                                                        <% } %>
+                                            </ul>
+                                        </div>
+                                        <% if (userInfo!==null && userInfo.admin) { %>
+                                            <div>
+                                                <button class="clvButton" onclick="sendPostRequest('delThread', '<%= threadName %>', 'clivaadmin', true)">delete</button>
+                                            </div>
+                                        <% } %>
+                                    </div>
+                                </div>
+                                <% } %>
+                                    <br><br><br>
+                                    <%- include('parts/editor') %>
         </div>
     </main>
