--- a/views/parts/editor.ejs
+++ b/views/parts/editor.ejs
@@ -1,13 +1,9 @@
 <head>
-    <!-- Другие метатеги -->
-    <title>My App</title>
-    <!-- Подключение CKEditor -->
     <script src="/node_modules/ckeditor4/ckeditor.js"></script>
 </head>
 
 <body>
-    <!-- Ваш контент -->
-    <textarea name="editor1" id="editor1" rows="10" cols="80">
+    <textarea class="clvSpaceBottom clvPadding maxSize2" name="editor1" id="editor1" rows="10" cols="100">
         This is my textarea to be replaced with CKEditor.
     </textarea>
     <script>
