--- a/public/css/themes/dark.css
+++ b/public/css/themes/dark.css
@@ -1,19 +1,38 @@
-:root{
+:root {
     /* --primary-color: #333333;
     --secondary-color: #414141;
     --darker-color: #252525;
     --accent-color: #00ff95;
     --text-color: #f5f5f5; */
 
-    --background-color: rgb(50,63,70);
+    --background-color: rgb(50, 63, 70);
     --background-color-2: rgb(32, 41, 46);
     --border-color: rgb(214, 214, 214);
     --accent-border-color: rgb(78, 207, 169);
 
     --elements-color: rgb(42, 206, 105);
-    --text-color: rgb(249,253,251);
+    --text-color: rgb(249, 253, 251);
 
     --border-shadow: 0 0 2px 1px rgb(53, 53, 53);
 
     --standart-border-radius: 5px;
+}
+
+.cke_top {
+    background-color: var(--background-color-2);
+    border-radius: var(--standart-border-radius);
+}
+
+.cke_button_icon {
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+}
+
+.dbody{
+    background-color: var(--background-color);
+}
+
+.cke_bottom{
+    background-color: var(--background-color-2);
+    border-radius: var(--standart-border-radius);
 }
